# rust_test_grpc

./: Cargo.toml  ReadMe.md  build.rs
schema/: Greeter.proto
src/: client.rs  main.rs  server.rs
